human-intervention-logs/org.springframework:spring-core:5.3.15/gradle-test/gradle-test-2026-06-07T17-08-41-175748Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.springframework:spring-core:5.3.15
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 29 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/tests/src/org.springframework/spring-core/5.3.15/src/test/java/org_springframework/spring_core/TypeMappedAnnotationTest.java:31: error: incompatible types: String cannot be converted to CAP#1
> Task :compileTestJava FAILED
        assertThat((Map<?, ?>) nestedMaps[0]).containsEntry("name", "alpha");
                                                            ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/tests/src/org.springframework/spring-core/5.3.15/src/test/java/org_springframework/spring_core/TypeMappedAnnotationTest.java:32: error: incompatible types: String cannot be converted to CAP#1
        assertThat((Map<?, ?>) nestedMaps[1]).containsEntry("name", "bravo");
                                                            ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/tests/src/org.springframework/spring-core/5.3.15/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/tests/src/org.springframework/spring-core/5.3.15/src/test/java/org_springframework/spring_core/TypeMappedAnnotationTest.java:31: error: incompatible types: String cannot be converted to CAP#1
          assertThat((Map<?, ?>) nestedMaps[0]).containsEntry("name", "alpha");
                                                              ^
    where CAP#1 is a fresh type-variable:
      CAP#1 extends Object from capture of ?
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/tests/src/org.springframework/spring-core/5.3.15/src/test/java/org_springframework/spring_core/TypeMappedAnnotationTest.java:32: error: incompatible types: String cannot be converted to CAP#1
          assertThat((Map<?, ?>) nestedMaps[1]).containsEntry("name", "bravo");
                                                              ^
    where CAP#1 is a fresh type-variable:
      CAP#1 extends Object from capture of ?
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2183-66c60ad9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.springframework:spring-core:5.3.15 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 8s
9 actionable tasks: 1 executed, 8 up-to-date
